--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<!-- Logo
 						============================================= -->
 						<div id="logo">
-							<a href="index.html" class="standard-logo" data-dark-logo="../logo-ste.JPEG"><img src="../logo-ste.JPEG" alt="STERIC LOGO"></a>
+							<a href="index.html" class="standard-logo" data-dark-logo="../logo-ste.JPEG"><img src="./logo-ste.JPEG" alt="STERIC LOGO"></a>
 						
 							<!-- <a href="index.html" class="retina-logo" data-dark-logo="images/logo-dark@2x.png"><img src="images/logo@2x.png" alt="Canvas Logo"></a> -->
 						</div><!-- #logo end -->
