--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<!-- Logo
 						============================================= -->
 						<div id="logo">
-							<a href="index.html" class="standard-logo" data-dark-logo="images/team/logo-ste.JPEG"><<img src="images/team/2.jpg" alt="Josh Clark">></a>
+							<a href="index.html" class="standard-logo" data-dark-logo="images/team/9.jpeg"><<img src="images/team/9.jpeg" alt="Josh Clark">></a>
 							
 						
 							<!-- <a href="index.html" class="retina-logo" data-dark-logo="images/logo-dark@2x.png"><img src="images/logo@2x.png" alt="Canvas Logo"></a> -->
