--- a/index.html
+++ b/index.html
@@ -1528,7 +1528,7 @@
 									<p class="d-none d-sm-block" data-animate="fadeInUp" data-delay="200">Create just what you need for your Perfect Website. Choose from a wide range of Elements &amp; simply put them on your own Canvas.</p>
 								</div>
 							</div>
-							<div class="swiper-slide-bg" style="background-image: url('images/slider/swiper/front.jpg');"></div>
+							<div class="swiper-slide-bg" style="background-image: url('images/slider/swiper/front.JPG');"></div>
 						</div>
 						<div class="swiper-slide dark">
 							<div class="container">
