--- a/index.html
+++ b/index.html
@@ -1537,7 +1537,7 @@
 									<p class="d-none d-sm-block" data-animate="fadeInUp" data-delay="200">High Quality Blended Tea &amp; Simply The Best.</p>
 								</div>
 							</div>
-							<div class="swiper-slide-bg" style="background-image: url('images/slider/swiper/front2.jpg');"></div>
+							<div class="swiper-slide-bg" style="background-image: url('images/slider/swiper/front2.JPG');"></div>
 						</div>
 						<!-- <div class="swiper-slide dark">
 							<div class="container">
@@ -1562,7 +1562,7 @@
 								</div>
 							</div>
 							<!-- <div class="swiper-slide-bg" style="background-image: url('images/slider/swiper/3.jpg'); background-position: center top;"></div> -->
-							<div class="swiper-slide-bg" style="background-image: url('images/slider/swiper/front3.jpg');"></div>
+							<div class="swiper-slide-bg" style="background-image: url('images/slider/swiper/front3.JPG');"></div>
 						</div>
 					</div>
 					<div class="slider-arrow-left"><i class="icon-angle-left"></i></div>
