--- a/index.html
+++ b/index.html
@@ -1591,7 +1591,7 @@
 						<div class="col-lg-7 align-self-end">
 
 							<div class="position-relative overflow-hidden">
-								<img src="images/slider/swiper/front4.JPG" data-animate="fadeInUp" data-delay="100" alt="Chrome">
+								<img src="images/slider/swiper/front4.jpg" data-animate="fadeInUp" data-delay="100" alt="Chrome">
 								<!-- <img src="images/services/main-fmobile.png" style="top: 0; left: 0; min-width: 100%; min-height: 100%;" data-animate="fadeInUp" data-delay="400" alt="iPhone" class="position-absolute"> -->
 							</div>
 
