--- a/index.html
+++ b/index.html
@@ -1528,7 +1528,7 @@
 									<p class="d-none d-sm-block" data-animate="fadeInUp" data-delay="200">Home To The Best &amp; simply The Best Tea.</p>
 								</div>
 							</div>
-							<div class="swiper-slide-bg" style="background-image: url('images/slider/swiper/front5.JPG');"></div>
+							<div class="swiper-slide-bg" style="background-image: url('images/slider/swiper/front5.jpg');"></div>
 						</div>
 						<div class="swiper-slide dark">
 							<div class="container">
