--- a/index.html
+++ b/index.html
@@ -1641,11 +1641,32 @@
 				<div class="container clearfix">
 
 					<div class="heading-block topmargin-lg center">
-						<h2>Even more Feature Rich</h2>
-						<span class="mx-auto">Philanthropy convener livelihoods, initiative end hunger gender rights local. John Lennon storytelling; advocate, altruism impact catalyst.</span>
+						<h2>STERIC COMMITEMENT TO LOCAL AND INTERNATIONA TOURISM</h2>
+						<span class="mx-auto">Sometimes discovering the best tea means leaving your comfort zone and setting out on an adventure. Tea tourism offers adventurers the opportunity to discover how tea is made while discovering new flavors. A trip to sterictea in kenya can help uncover the secret to great tasting, aromatic tea and can improve your tea experience..</span>
+					</div>
+					<div class="container">
+						<div class="row align-items-center">
+	
+							<div class="col-lg-5">
+								<div class="heading-block">
+									<h1>ABOUT.<br>STERICTEA.</h1>
+								</div>
+								<p class="lead">Weare a  registered company in Kenya, situated in Limuru town in the tea growing zone of the formerly White highlands. The climate is ideal for the growth of high quality tea green leaf which is globally recognized as a unique beverage. </p>
+							</div>
+	
+							<div class="col-lg-7 align-self-end">
+								
+								<div class="position-relative overflow-hidden">
+									<img src="images/slider/swiper/tour.jpeg" data-animate="fadeInUp" data-delay="100" alt="Chrome">
+									<!-- <img src="images/services/main-fmobile.png" style="top: 0; left: 0; min-width: 100%; min-height: 100%;" data-animate="fadeInUp" data-delay="400" alt="iPhone" class="position-absolute"> -->
+								</div>
+	
+							</div>
+	
+						</div>
 					</div>
 
-					<div class="row col-mb-50 mb-4">
+					<!-- <div class="row col-mb-50 mb-4">
 						<div class="col-lg-4 col-md-6">
 
 							<div class="feature-box flex-md-row-reverse text-md-end" data-animate="fadeIn">
@@ -1717,7 +1738,7 @@
 							</div>
 
 						</div>
-					</div>
+					</div> -->
 
 				</div>
 
