--- a/index.html
+++ b/index.html
@@ -1649,9 +1649,10 @@
 	
 							<div class="col-lg-5">
 								<div class="heading-block">
-									<h1>ABOUT.<br>STERICTEA.</h1>
+									<h1>Local.<br>Tourism.</h1>
 								</div>
-								<p class="lead">Weare a  registered company in Kenya, situated in Limuru town in the tea growing zone of the formerly White highlands. The climate is ideal for the growth of high quality tea green leaf which is globally recognized as a unique beverage. </p>
+								<p class="lead">We recognize and appreciate the value of nature that creates good memories and good times,at steric we highly recommend local and international
+									 tourist to visit and explore our exotic views and create lasting memories...feel free to book and visit us anytime. . </p>
 							</div>
 	
 							<div class="col-lg-7 align-self-end">
