--- a/index.html
+++ b/index.html
@@ -1666,7 +1666,32 @@
 	
 						</div>
 					</div>
-
+					<div class="heading-block topmargin-lg center">
+						<h2>STERIC COMMITEMENT TO LOCAL AND INTERNATIONA TOURISM</h2>
+						<span class="mx-auto">Sometimes discovering the best tea means leaving your comfort zone and setting out on an adventure. Tea tourism offers adventurers the opportunity to discover how tea is made while discovering new flavors. A trip to sterictea in kenya can help uncover the secret to great tasting, aromatic tea and can improve your tea experience..</span>
+					</div>
+					<div class="container">
+						<div class="row align-items-center">
+	
+							<div class="col-lg-5">
+								<div class="heading-block">
+									<h1>Local.<br>Tourism.</h1>
+								</div>
+								<p class="lead">We recognize and appreciate the value of nature that creates good memories and good times,at steric we highly recommend local and international
+									 tourist to visit and explore our exotic views and create lasting memories...feel free to book and visit us anytime. . </p>
+							</div>
+	
+							<div class="col-lg-7 align-self-end">
+								
+								<div class="position-relative overflow-hidden">
+									<img src="images/slider/swiper/tour.jpeg" data-animate="fadeInUp" data-delay="100" alt="Chrome">
+									<!-- <img src="images/services/main-fmobile.png" style="top: 0; left: 0; min-width: 100%; min-height: 100%;" data-animate="fadeInUp" data-delay="400" alt="iPhone" class="position-absolute"> -->
+								</div>
+	
+							</div>
+	
+						</div>
+					</div>
 					<!-- <div class="row col-mb-50 mb-4">
 						<div class="col-lg-4 col-md-6">
 
@@ -1743,7 +1768,7 @@
 
 				</div>
 
-				<div class="row clearfix align-items-stretch">
+				<!-- <div class="row clearfix align-items-stretch">
 
 					<div class="col-lg-6 center col-padding" style="background: url('images/services/main-bg.jpg') center center no-repeat; background-size: cover;">
 					</div>
@@ -1767,7 +1792,7 @@
 						<p class="lead mb-0">Democracy inspire breakthroughs, Rosa Parks; inspiration raise awareness natural resources. Governance impact; transformative donation philanthropy, respect reproductive.</p>
 					</div>
 
-				</div>
+				</div> -->
 
 				<div class="row clearfix align-items-stretch bottommargin-lg">
 
@@ -2281,10 +2306,10 @@
 
 								<div class="team">
 									<div class="team-image">
-										<img src="images/team/3.jpg" alt="John Doe">
+										<img src="images/team/13.jpg" height="250" width="550" alt="John Doe">
 									</div>
 									<div class="team-desc team-desc-bg">
-										<div class="team-title"><h4>John Doe</h4><span>CEO</span></div>
+										<div class="team-title"><h4>Richard Wangenye Gitau</h4><span>DIRECTOR</span></div>
 										<a href="#" class="social-icon inline-block si-small si-light si-rounded si-facebook">
 											<i class="icon-facebook"></i>
 											<i class="icon-facebook"></i>
@@ -2306,10 +2331,10 @@
 
 								<div class="team">
 									<div class="team-image">
-										<img src="images/team/2.jpg" alt="Josh Clark">
+										<img src="images/team/12.jpg" height="250" width="550" alt="John Doe">
 									</div>
 									<div class="team-desc team-desc-bg">
-										<div class="team-title"><h4>Josh Clark</h4><span>Co-Founder</span></div>
+										<div class="team-title"><h4>Dennis Gitau</h4><span>CEO</span></div>
 										<a href="#" class="social-icon inline-block si-small si-light si-rounded si-facebook">
 											<i class="icon-facebook"></i>
 											<i class="icon-facebook"></i>
@@ -2331,10 +2356,10 @@
 
 								<div class="team">
 									<div class="team-image">
-										<img src="images/team/8.jpg" alt="Mary Jane">
+										<img src="images/team/14.jpg" height="250" width="550" alt="John Doe">
 									</div>
 									<div class="team-desc team-desc-bg">
-										<div class="team-title"><h4>Mary Jane</h4><span>Sales</span></div>
+										<div class="team-title"><h4>Allan Mwaura</h4><span>IT Support</span></div>
 										<a href="#" class="social-icon inline-block si-small si-light si-rounded si-facebook">
 											<i class="icon-facebook"></i>
 											<i class="icon-facebook"></i>
@@ -2354,12 +2379,12 @@
 
 							<div class="col-lg-3 col-md-6 bottommargin">
 
-								<div class="team">
+								<div class="team">	
 									<div class="team-image">
-										<img src="images/team/4.jpg" alt="Nix Maxwell">
+										<img src="images/team/15.JPEG" height="250" width="550" alt="John Doe">
 									</div>
 									<div class="team-desc team-desc-bg">
-										<div class="team-title"><h4>Nix Maxwell</h4><span>Support</span></div>
+										<div class="team-title"><h4>JEMIMAH WANGENYE</h4><span>Tourism Manager</span></div>
 										<a href="#" class="social-icon inline-block si-small si-light si-rounded si-facebook">
 											<i class="icon-facebook"></i>
 											<i class="icon-facebook"></i>
