--- a/index.html
+++ b/index.html
@@ -2381,7 +2381,7 @@
 
 								<div class="team">	
 									<div class="team-image">
-										<img src="images/team/15.JPEG" height="250" width="550" alt="John Doe">
+										<img src="images/team/15.jpeg" height="250" width="550" alt="John Doe">
 									</div>
 									<div class="team-desc team-desc-bg">
 										<div class="team-title"><h4>JEMIMAH WANGENYE</h4><span>Tourism Manager</span></div>
