--- a/index.html
+++ b/index.html
@@ -1684,10 +1684,10 @@
 	
 							<div class="col-lg-7 ">
 								<div class="heading-block">
-									<h1>Best.<br>Game drives.</h1>
+									<h1>Jemimah .<br>Wangenye.</h1>
 								</div>
-								<p class="lead">We recognize and appreciate the value of nature that creates good memories and good times,at steric we highly recommend local and international
-									 tourist to visit and explore our exotic views and create lasting memories...feel free to book and visit us anytime. . </p>
+								<p class="lead">We promise to take you places that will forever define your memories.Our choice of sceneries is exotic and breath taking .Kindly reach via email or phone us to book a place. . </p>
+								<h1>Tel:+254718639541</h1>
 							</div>
 	
 						
@@ -1796,7 +1796,7 @@
 
 				</div> -->
 
-				<div class="row clearfix align-items-stretch bottommargin-lg">
+				<!-- <div class="row clearfix align-items-stretch bottommargin-lg">
 
 					<div class="col-lg-3 col-md-6 dark center col-padding" style="background-color: #515875;">
 						<i class="i-plain i-xlarge mx-auto icon-line2-directions"></i>
@@ -1822,9 +1822,9 @@
 						<h5>Hours of Coding</h5>
 					</div>
 
-				</div>
+				</div> -->
 
-				<div class="container clearfix">
+				<!-- <div class="container clearfix">
 
 					<div class="row col-mb-50">
 						<div class="col-sm-6 col-lg-4">
@@ -1936,15 +1936,15 @@
 						</div>
 					</div>
 
-				</div>
+				</div> -->
 
-				<div class="section topmargin mb-0 border-bottom-0">
+				<!-- <div class="section topmargin mb-0 border-bottom-0">
 					<div class="container clearfix">
 						<div class="heading-block center m-0">
 							<h3>Our Latest Works</h3>
 						</div>
 					</div>
-				</div>
+				</div> -->
 
 				<!-- <div id="portfolio" class="portfolio row g-0 portfolio-reveal grid-container"> -->
 
@@ -2122,13 +2122,13 @@
 
 				</div>
 
-				<a href="portfolio.html" class="button button-full button-dark center text-end bottommargin-lg">
+				<!-- <a href="portfolio.html" class="button button-full button-dark center text-end bottommargin-lg">
 					<div class="container clearfix">
 						More than 100+ predefined Portfolio Grid Layouts. <strong>See More</strong> <i class="icon-caret-right" style="top:4px;"></i>
 					</div>
-				</a>
+				</a> -->
 
-				<div class="container clearfix">
+				<!-- <div class="container clearfix">
 
 					<div class="row align-items-center col-mb-50">
 						<div class="col-md-4 center">
@@ -2148,15 +2148,15 @@
 						</div>
 					</div>
 
-				</div>
+				</div> -->
 
-				<div class="section parallax dark mb-0" style="background-image: url('images/services/home-testi-bg.jpg'); padding: 100px 0;" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
+				<!-- <div class="section parallax dark mb-0" style="background-image: url('images/services/home-testi-bg.jpg'); padding: 100px 0;" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;"> -->
 
-					<div class="heading-block center">
+					<!-- <div class="heading-block center">
 						<h3>What Clients Say?</h3>
-					</div>
+					</div> -->
 
-					<div class="fslider testimonial testimonial-full" data-animation="fade" data-arrows="false">
+					<!-- <div class="fslider testimonial testimonial-full" data-animation="fade" data-arrows="false">
 						<div class="flexslider">
 							<div class="slider-wrap">
 								<div class="slide">
@@ -2197,19 +2197,19 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 
 				</div>
 
-				<div class="section mt-0 border-top-0">
+				<!-- <div class="section mt-0 border-top-0">
 					<div class="container clearfix">
 						<div class="heading-block center m-0">
 							<h3>Latest from the Blog</h3>
 						</div>
 					</div>
-				</div>
+				</div> -->
 
-				<div class="container">
+				<!-- <div class="container">
 					<div class="row posts-md col-mb-30">
 
 						<div class="col-lg-3 col-md-6">
@@ -2293,7 +2293,7 @@
 						</div>
 
 					</div>
-				</div>
+				</div> -->
 
 				<div class="section">
 					<div class="container clearfix">
